# Project_pattern

./: .gitignore  README.md  pyproject.toml
project/: main.py
