[tool.poetry]
name = ""
version = "0.1.0"
description = ""
authors = ["Author"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
venv-dir = "venv"

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120
select = ["ALL"]
ignore = ["D1", "D203", "D213", "FA102", "ANN101"]

[tool.ruff.isort]
no-lines-before = ["standard-library", "local-folder"]
known-third-party = []
known-local-folder = ["whole_app"]

[tool.ruff.extend-per-file-ignores]
"stargate/tests/*.py" = ["ANN401", "S101", "S311"]